--- a/xray/base.config
+++ b/xray/base.config
@@ -6,33 +6,37 @@
   },
   "outbounds": [
     {
-      "protocol": "freedom",
-      "tag": "direct"
-    },
-    {
-      "protocol": "blackhole",
-      "tag": "block"
+      "protocol": "freedom"
     }
   ],
+  "stats": {},
   "policy": {
     "levels": {
       "0": {
-        "handshake": 4,
-        "connIdle": 291
+        "statsUserUplink": true,
+        "statsUserDownlink": true
       }
+    },
+    "system": {
+      "statsOutboundUplink": true,
+      "statsOutboundDownlink": true
     }
+  },
+  "api": {
+    "tag": "api",
+    "services": ["StatsService"]
   },
   "dns": {
     "servers": ["localhost"]
   },
   "routing": {
-    "domainStrategy": "AsIs",
     "rules": [
       {
-        "type": "field",
-        "ip": ["geoip:private"],
-        "outboundTag": "block"
+        "inboundTag": ["api"],
+        "outboundTag": "api",
+        "type": "field"
       }
-    ]
+    ],
+    "domainStrategy": "AsIs"
   }
 }
